<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <Button
        android:id="@+id/read_lock_id_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_core_id"/>
    <TextView
        android:id="@+id/lock_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/read_key_id_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_id" />
    <TextView
        android:id="@+id/key_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/read_record_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_record"/>
    <TextView
        android:id="@+id/record_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>